--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "@slidev/cli": "^0.28.10",
     "@slidev/theme-default": "*",
     "@slidev/theme-seriph": "*",
-    "@slidev/theme-shibainu": "0.0.2"
+    "@slidev/theme-shibainu": "*"
   },
   "name": "presentation-micro-frontends",
   "devDependencies": {
